# cool-dungeon

./: .gitignore  README.md
assets/images/: explode.ase  hit-effect.ase  jab.ase  player_idle.ase  swipe.ase
level-gen/: 1.level  1.levle  2.level  4.level
level-gen/src/: CMakeLists.txt  gen-sf.cpp
levels/default/: 1.level
src/: AABB.cpp  AABB.hpp  Animation.cpp  Baddie.cpp  Baddie.hpp  Block.cpp  Box.hpp  CMakeLists.txt  Entity.cpp  Entity.hpp  Maths.hpp  Player.cpp  Player.hpp  StatusBar.cpp  StatusBar.hpp  World.cpp  World.hpp  asset_registers.hpp  main.cpp  tex_register.hpp
src/include/: Animation.hpp  Baddie.hpp  BaddieTypes.hpp  Block.hpp  Config.hpp  Entity.hpp  Maths.hpp  Player.hpp  World.hpp  asset_registers.hpp
